# markdown-it-reader

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  tasks.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  main.yml
pelican/plugins/markdown_it_reader/: __init__.py  markdown_it_reader.py  test_markdown_it_reader.py
