[tool.poetry]
name = "pelican-markdown-it-reader"
version = "2.0.4"
description = "Reader plugin for Markdown-IT-py replacement"
authors = ["Gaige B. Paulsen <gaige@cluetrust.com>"]
license = "MIT"
readme = "README.md"
keywords = ["pelican", "plugin"]
repository = "https://github.com/gaige/markdown-it-reader"
documentation = "https://docs.getpelican.com"
packages = [
    { include = "pelican" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/gaige/markdown-it-reader/issues"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pelican = ">=4.11"
Pygments = "^2.16"
markdown-it-py = "^4.0"
markdown = {version = "^3.10", optional = true}
mdit-py-plugins = "^0.6"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
black = "^26.5"
flake8 = "^7.3"
flake8-black = "^0.4"
invoke = "^3.0"
isort = "^8.0"
livereload = "^2.7"
markdown = "^3.10"
pytest = "^9.1"
pytest-cov = "^7.1"
pytest-pythonpath = "^0.7"
pytest-sugar = "^1.1"
Werkzeug = "^3.1"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.autopub]
project-name = "Markdown-IT reader"
git-username = "gaige"
git-email = "gaige@cluetrust.com"
append-github-contributor = true

[tool.commitizen]
version_provider = "poetry"
tag_format = "v$major.$minor.$patch$prerelease"
update_changelog_on_bump = true

[tool.commitizen.customize]
# changelog_pattern = "^(feature|bug fix|docs)?(!)?"

[tool.isort]
# Maintain compatibility with Black
profile = "black"
multi_line_output = 3

# Sort imports within their section independent of the import type
force_sort_within_sections = true

# Designate "pelican" as separate import section
known_pelican = "pelican"
sections = "FUTURE,STDLIB,THIRDPARTY,PELICAN,FIRSTPARTY,LOCALFOLDER"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
